--- a/FriendlyTalk/Base.lproj/Main.storyboard
+++ b/FriendlyTalk/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginVC" customModule="FriendlyTalk" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,113 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KnC-iv-DEu">
+                                <rect key="frame" x="34" y="301" width="306" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your phone number" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAw-zb-3sI">
+                                <rect key="frame" x="34" y="180" width="306" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pt4-M5-hzI">
+                                <rect key="frame" x="34" y="357" width="306" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="25a-ti-R9v">
+                                <rect key="frame" x="34" y="422" width="306" height="30"/>
+                                <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="LoginBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gio-AL-hpj"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QI5-U0-Nen">
+                                <rect key="frame" x="34" y="236" width="306" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="PAw-zb-3sI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="18" id="11p-9B-ZUG"/>
+                            <constraint firstItem="PAw-zb-3sI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2RM-jF-RTZ"/>
+                            <constraint firstItem="pt4-M5-hzI" firstAttribute="leading" secondItem="KnC-iv-DEu" secondAttribute="leading" id="2ms-82-Vcu"/>
+                            <constraint firstItem="pt4-M5-hzI" firstAttribute="trailing" secondItem="KnC-iv-DEu" secondAttribute="trailing" id="2re-xe-U5h"/>
+                            <constraint firstItem="QI5-U0-Nen" firstAttribute="trailing" secondItem="PAw-zb-3sI" secondAttribute="trailing" id="7fh-TW-ohl"/>
+                            <constraint firstItem="QI5-U0-Nen" firstAttribute="leading" secondItem="PAw-zb-3sI" secondAttribute="leading" id="9cC-HM-GX6"/>
+                            <constraint firstItem="QI5-U0-Nen" firstAttribute="top" secondItem="PAw-zb-3sI" secondAttribute="bottom" constant="35" id="9jm-gT-zVT"/>
+                            <constraint firstItem="25a-ti-R9v" firstAttribute="leading" secondItem="pt4-M5-hzI" secondAttribute="leading" id="Gb2-lm-EsB"/>
+                            <constraint firstItem="KnC-iv-DEu" firstAttribute="top" secondItem="QI5-U0-Nen" secondAttribute="bottom" constant="35" id="RWc-U6-ynI"/>
+                            <constraint firstItem="PAw-zb-3sI" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="160" id="Yc6-Yq-dMH"/>
+                            <constraint firstItem="pt4-M5-hzI" firstAttribute="top" secondItem="KnC-iv-DEu" secondAttribute="bottom" constant="35" id="bPG-LV-Mgo"/>
+                            <constraint firstItem="KnC-iv-DEu" firstAttribute="trailing" secondItem="QI5-U0-Nen" secondAttribute="trailing" id="kba-m7-Djw"/>
+                            <constraint firstItem="KnC-iv-DEu" firstAttribute="leading" secondItem="QI5-U0-Nen" secondAttribute="leading" id="ki6-hE-uxL"/>
+                            <constraint firstItem="25a-ti-R9v" firstAttribute="top" secondItem="pt4-M5-hzI" secondAttribute="bottom" constant="35" id="m23-Pu-qFM"/>
+                            <constraint firstItem="25a-ti-R9v" firstAttribute="trailing" secondItem="pt4-M5-hzI" secondAttribute="trailing" id="qcl-nl-Ul1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <segue destination="mgA-qF-BeE" kind="show" id="ube-vQ-Rze"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="139.880059970015"/>
+        </scene>
+        <!--ChatVC-->
+        <scene sceneID="Zfb-pi-T3m">
+            <objects>
+                <viewController id="mgA-qF-BeE" customClass="ChatVC" customModule="FriendlyTalk" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ula-5U-PxX"/>
+                        <viewControllerLayoutGuide type="bottom" id="ydP-n7-pgD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="b6q-6B-zer">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="u8X-FR-fCN">
+                                <rect key="frame" x="46" y="624" width="261" height="35"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BSG-eU-U2D">
+                                <rect key="frame" x="315" y="629" width="36" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="AHG-Wa-CYK"/>
+                                </constraints>
+                                <state key="normal" title="Send"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kuR-l7-qrt">
+                                <rect key="frame" x="8" y="629" width="30" height="30"/>
+                                <state key="normal" title="+"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kuR-l7-qrt" firstAttribute="leading" secondItem="b6q-6B-zer" secondAttribute="leading" constant="8" id="1qv-Xf-sSC"/>
+                            <constraint firstItem="ydP-n7-pgD" firstAttribute="top" secondItem="u8X-FR-fCN" secondAttribute="bottom" constant="8" id="27a-kN-OIs"/>
+                            <constraint firstItem="ydP-n7-pgD" firstAttribute="top" secondItem="kuR-l7-qrt" secondAttribute="bottom" constant="8" id="46T-Ec-6CJ"/>
+                            <constraint firstItem="BSG-eU-U2D" firstAttribute="leading" secondItem="u8X-FR-fCN" secondAttribute="trailing" constant="8" id="XDk-D9-9Cl"/>
+                            <constraint firstItem="u8X-FR-fCN" firstAttribute="leading" secondItem="kuR-l7-qrt" secondAttribute="trailing" constant="8" id="drY-T5-AqU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BSG-eU-U2D" secondAttribute="trailing" constant="8" id="iF3-tQ-WOa"/>
+                            <constraint firstItem="ydP-n7-pgD" firstAttribute="top" secondItem="BSG-eU-U2D" secondAttribute="bottom" constant="8" id="jB1-Zy-AND"/>
+                            <constraint firstItem="u8X-FR-fCN" firstAttribute="top" secondItem="ula-5U-PxX" secondAttribute="bottom" constant="604" id="l4f-2U-Vkn"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ar-bB-m8o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="888.79999999999995" y="139.880059970015"/>
         </scene>
     </scenes>
 </document>
